[package]
name = "aurora-streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
redis = { version="0.24.0", features=["tokio-comp"], optional = true }
tokio = { version= "1.35.0", features=["full"] }

[features]
default = []
event-routing = ["redis"]
