[package]
name = "aurora-streams"
version = "1.1.0"
edition = "2021"
description = "library for managing publish-subscribe channels using Tokio message passing channels."
license = "MIT"
repository = "https://github.com/josh-tracey/aurora-streams"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
redis = { version = "0.26", features = ["tokio-comp"], optional = true }
tokio = { version = "~1", features = ["full"] }

[features]
default = []
event-routing = ["redis"]
